--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
+      android:background="#f5f5f5"
       android:orientation="vertical"
       >
 
@@ -73,6 +74,14 @@
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_launcher"
         />
+
+    <com.facebook.drawee.view.DraweeView
+        android:id="@+id/drawee_view"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="right"
+        />
+
 
   </LinearLayout>
 
