add show gridding

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,10 @@
         android:layout_gravity="right"
         />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="500dp"
+        />
 
   </LinearLayout>
 
