fix set placeHolderImage in xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     >
 
   <LinearLayout
@@ -77,9 +78,10 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/drawee_view"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_gravity="right"
+        app:placeholderImage="@mipmap/ic_placeholder"
         />
 
     <LinearLayout
