--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,13 @@
         android:background="@mipmap/ic_placeholder"
         />
 
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_gravity="center_horizontal"
+        android:background="@mipmap/ic_tip"
+        />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="500dp"
