--- a/uetool/src/main/res/layout/uet_cell_bitmap_info.xml
+++ b/uetool/src/main/res/layout/uet_cell_bitmap_info.xml
@@ -29,8 +29,8 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:src="@drawable/uet_menu"
         />
 
