--- a/uetool/src/main/res/layout/uet_cell_switch.xml
+++ b/uetool/src/main/res/layout/uet_cell_switch.xml
@@ -13,6 +13,7 @@
       android:id="@+id/name"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_centerVertical="true"
       android:maxLines="1"
       android:textColor="#ccc"
       android:textSize="@dimen/uet_info_text_size"
