--- a/uetool/src/main/res/layout/uet_cell_bitmap_info.xml
+++ b/uetool/src/main/res/layout/uet_cell_bitmap_info.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -20,10 +20,9 @@
       />
 
   <LinearLayout
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_alignParentRight="true"
-      android:gravity="center"
+      android:gravity="center_vertical|right"
       android:orientation="vertical"
       >
 
@@ -47,4 +46,4 @@
 
   </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
