--- a/uetool/src/main/res/layout/uet_cell_edit_text.xml
+++ b/uetool/src/main/res/layout/uet_cell_edit_text.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_centerVertical="true"
+    android:gravity="center_vertical"
     android:paddingBottom="5dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
@@ -20,10 +20,10 @@
       />
 
   <LinearLayout
-      android:layout_width="wrap_content"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_alignParentRight="true"
-      android:gravity="center_vertical"
+      android:layout_marginLeft="10dp"
+      android:gravity="center_vertical|right"
       >
 
     <View
@@ -47,4 +47,4 @@
 
   </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
