--- a/uetool/src/main/res/layout/uet_text_debug.xml
+++ b/uetool/src/main/res/layout/uet_text_debug.xml
@@ -3,9 +3,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="bottom|right"
-    android:background="#688fdb"
-    android:padding="5dp"
-    android:text="DEBUG"
+    android:background="#90688fdb"
+    android:padding="3dp"
     android:textColor="#fff"
-    android:textSize="10sp"
+    android:textSize="9sp"
     />
