add fragment activity

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,14 @@
                 android:text="show dialog"
                 />
 
+            <Button
+                    android:id="@+id/btn3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:onClick="onClick"
+                    android:text="fragment activity"
+            />
+
         </LinearLayout>
 
         <Space
