--- a/app/src/main/res/layout/fragment_sample_fragment.xml
+++ b/app/src/main/res/layout/fragment_sample_fragment.xml
@@ -12,7 +12,13 @@
             android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FragmentSampleFragment"
+            android:text="FragmentSampleFragment"/>
+
+    <TextView
+            android:id="@+id/message2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FragmentSampleFragment2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
