support show activity's fragment tree

--- a/app/src/main/res/layout/fragment_sample_fragment.xml
+++ b/app/src/main/res/layout/fragment_sample_fragment.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/fragmentsample"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragmentsample.FragmentSampleFragment">
+        android:orientation="vertical">
 
     <TextView
             android:id="@+id/message"
@@ -18,10 +16,15 @@
             android:id="@+id/message2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="FragmentSampleFragment2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:textSize="20dp"
+            android:layout_marginTop="10dp"
+            android:text="FragmentSampleFragment2"/>
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+            android:id="@+id/container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#60688fdb"
+            android:layout_margin="30dp"/>
+
+</LinearLayout>
