--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -157,6 +157,7 @@
             android:layout_marginTop="10dp"
             android:background="#90688fdb"
             android:padding="10dp"
+            android:tag="custom_view_tag"
             android:text="this is a custom view"
             />
 
