--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -209,6 +209,25 @@
             android:layout_height="wrap_content"
             />
 
+        <TextView
+            android:id="@+id/font_test"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginEnd="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginRight="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:background="#f00"
+            android:gravity="center"
+            android:lineSpacingExtra="2dp"
+            android:padding="12dp"
+            android:text="Font Test"
+            android:textColor="#fff"
+            android:textSize="15dp"
+            />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="500dp"
