support show xml

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#f5f5f5"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
 
         <android.support.v7.widget.SwitchCompat
             android:id="@+id/control"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="5dp"
-            android:text="on-off control   "
-            />
+            android:text="on-off control   " />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -30,8 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/gradient_background"
-                >
+                android:background="@drawable/gradient_background">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -42,8 +37,7 @@
                     android:text="Hello World"
                     android:textColor="#fff"
                     android:textSize="20sp"
-                    android:textStyle="bold"
-                    />
+                    android:textStyle="bold" />
 
             </FrameLayout>
 
@@ -61,12 +55,12 @@
                     android:gravity="center"
                     android:padding="5dp"
                     android:text="I'm behind a mask view\n do you know how to select me?"
-                    android:textColor="#fff"/>
+                    android:textColor="#fff" />
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="#30000000"/>
+                    android:background="#30000000" />
 
             </FrameLayout>
 
@@ -74,48 +68,41 @@
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="10dp"
-            />
+            android:layout_height="10dp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            >
+            android:layout_gravity="center">
 
             <Button
                 android:id="@+id/btn1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:text="activity"
-                />
+                android:text="activity" />
 
             <Space
                 android:layout_width="10dp"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
 
             <Button
                 android:id="@+id/btn2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:text="dialog"
-                />
+                android:text="dialog" />
 
             <Space
                 android:layout_width="10dp"
-                android:layout_height="match_parent"
-                />
+                android:layout_height="match_parent" />
 
             <Button
                 android:id="@+id/btn3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:onClick="onClick"
-                android:text="fragment activity"
-                />
+                android:text="fragment activity" />
 
         </LinearLayout>
 
@@ -124,21 +111,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="onClick"
-            android:text="list activity"
-            />
+            android:text="list activity" />
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="10dp"
-            android:visibility="invisible"
-            />
+            android:visibility="invisible" />
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="world"
-            android:translationX="100dp"
-            />
+            android:translationX="100dp" />
 
         <me.ele.uetool.sample.FilterOutView
             android:layout_width="wrap_content"
@@ -146,8 +130,7 @@
             android:background="#90000000"
             android:padding="10dp"
             android:text="you won't select me by UETool"
-            android:textColor="#fff"
-            />
+            android:textColor="#fff" />
 
         <me.ele.uetool.sample.CustomView
             android:id="@+id/custom"
@@ -158,8 +141,12 @@
             android:background="#90688fdb"
             android:padding="10dp"
             android:tag="custom_view_tag"
-            android:text="this is a custom view"
-            />
+            android:text="this is a custom view" />
+
+        <me.ele.uetool.sample.CustomLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp" />
 
 
         <ImageView
@@ -168,8 +155,7 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher"
-            />
+            android:src="@mipmap/ic_launcher" />
 
         <com.facebook.drawee.view.SimpleDraweeView
             android:id="@+id/drawee_view"
@@ -177,42 +163,36 @@
             android:layout_height="120dp"
             android:layout_gravity="right"
             app:placeholderImage="@drawable/ic_placeholder"
-            app:roundedCornerRadius="3dp"
-            />
+            app:roundedCornerRadius="3dp" />
 
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/ic_placeholder"
-            />
+            android:background="@drawable/ic_placeholder" />
 
         <ImageView
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/ic_tip"
-            />
+            android:background="@drawable/ic_tip" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:drawableLeft="@drawable/ic_up_vote"
-            android:drawablePadding="5dp"
             android:drawableRight="@drawable/ic_down_vote"
-            android:text="hello world"
-            />
+            android:drawablePadding="5dp"
+            android:text="hello world" />
 
         <TextView
             android:id="@+id/span"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+            android:layout_height="wrap_content" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            />
+            android:layout_height="500dp" />
 
     </LinearLayout>
 
